--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@salesforce/dev-config": "^1.4.4",
         "admin-lte": "^2.3.11",
+        "bcrypt": "3.0.6",
         "bootstrap": "^3.3.7",
         "cookies": "^0.8.0",
         "dotenv-flow": "^3.1.0",
@@ -29,15 +30,15 @@
         "jsdom": "^16.2.2",
         "jshashes": "^1.0.8",
         "ts-node": "^8.4.1",
-        "bcrypt": "3.0.6",
-        "wechat-crypto": "^0.0.2"
+        "wechat-crypto": "^0.0.2",
+        "wechat-oauth": "^1.5.0"
     },
     "devDependencies": {
         "@steedos/accounts": "1.23.32",
         "@steedos/steedos-plugin-workflow": "2.1.1",
         "babel-runtime": "^6.23.0",
-        "steedos-server": "1.23.32",
-        "nodemon": "^1.19.1"
+        "nodemon": "^1.19.1",
+        "steedos-server": "1.23.32"
     },
     "homepage": "https://github.com/steedos/steedos-plugin-qywx#readme",
     "resolutions": {
